{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 8,
  "lineage": "5a7ab4aa-a8e7-cff1-9cf4-4be9e7bcf0f7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181034493839:security-group/sg-0c9009776af1c250b",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0c9009776af1c250b",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0bf799b0c52d1ee95"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "detector-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Detector port",
            "from_port": 40674,
            "id": "sgrule-708290109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9009776af1c250b",
            "security_group_rule_id": "sgr-0432c41673b203eae",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 40674,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ocr-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Detector port",
            "from_port": 40675,
            "id": "sgrule-2540838930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9009776af1c250b",
            "security_group_rule_id": "sgr-0caa1ee2deac68dcf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 40675,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1523063704",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9009776af1c250b",
            "security_group_rule_id": "sgr-07baaf1285300b3c9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default-sg"
          ]
        }
      ]
    }
  ]
}